# Project-4

./: README.md
CAD/: Base.SLDPRT  Bin Weighting System.SLDASM  Bracket Front.SLDPRT  Bracket LR.SLDPRT  CSH-STN-M4-20.SLDPRT  Camera Moudule 3.SLDASM  Depth Camera Bracket.SLDPRT  E-GSCB3-10.SLDPRT  E-GSCB4-30.SLDPRT  E-GSCB5-12.SLDPRT  E-GSCB5-16.SLDPRT  E-GSKNTR3.SLDPRT  E-GSLBNR4.SLDPRT  Face Mask.SLDPRT  Focatek Depth Camera.SLDPRT  HFHQ2020 Profile.SLDPRT  HX711 Mount.SLDPRT  Heatsink with Fan.SLDPRT  Hydrating Lotion.SLDPRT  LCF6-2020-200 Profile.SLDPRT  Lip Tint.SLDPRT  Load Cell.SLDPRT  Profile Slider.SLDPRT  Raspberry Pi 3 Camera Mount.SLDPRT  SHNTU5-5.sldprt  SPWF4 Washer.SLDPRT  USB Port Hub Mount.SLDPRT  Weighing Plate.SLDPRT
CAD/3D/: Depth Camera Bracket.gcode.3mf  Face Mask.gcode.3mf  HX711.gcode.3mf  Hydrating Lotion.gcode.3mf  Lip Tint.gcode.3mf  Profile SIilder.gcode.3mf  Rasberry Pi Camera camera Module 3 FRONT.gcode.3mf  Raspberry Pi 3 Camera Mount.gcode.3mf  Raspberry Pi Camera Module 3 BACK.gcode.3mf  USB Port Hub Mount.gcode.3mf
CAD/Drawing/: Base.SLDDRW  Bracket Front.SLDDRW  Bracket LR.SLDDRW  Depth Camera Bracket.SLDDRW  HFHQ2020 Profile.SLDDRW  HX711 Mount.SLDDRW  Profile Slider.SLDDRW  Raspberry Pi 3 Camera Mount.SLDDRW  USB Port Hub Mount.SLDDRW  Weighing Plate.SLDDRW
Document/: Project 4 Team 5 BOM List.xlsx  Project 4 Team 5 Gnatt Chart.xlsx
bin_weighing_ws/install/: local_setup.sh  setup.sh
bin_weighing_ws/install/camera_ros/lib/camera_ros/: camera_node
bin_weighing_ws/install/camera_ros/share/camera_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
bin_weighing_ws/install/camera_ros/share/camera_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  camera_componentTargetsExport.cmake  camera_rosConfig-version.cmake  camera_rosConfig.cmake
bin_weighing_ws/install/camera_ros/share/camera_ros/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
bin_weighing_ws/install/camera_ros/share/camera_ros/launch/: camera.launch.py
bin_weighing_ws/install/gv_ros2/lib/gv_ros2/: gv_ros2_node
bin_weighing_ws/install/gv_ros2/share/gv_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
bin_weighing_ws/install/gv_ros2/share/gv_ros2/cmake/: gv_ros2Config-version.cmake  gv_ros2Config.cmake
bin_weighing_ws/install/gv_ros2/share/gv_ros2/config/: camera_config.yaml
bin_weighing_ws/install/gv_ros2/share/gv_ros2/environment/: ament_prefix_path.dsv  path.dsv
bin_weighing_ws/install/gv_ros2/share/gv_ros2/launch/: bin_weighing.launch.py  (+1 more)
bin_weighing_ws/install/hx711_scale/lib/hx711_scale/: calibration_node  scale_node
bin_weighing_ws/install/hx711_scale/share/hx711_scale/: package.bash  package.dsv  package.sh  package.zsh
bin_weighing_ws/log/: latest_build
bin_weighing_ws/src/: barcode_detector.py  bin_weighing_backend.py  bin_weighing_manager.py  bin_weighing_system.py  bins_master.csv  object_detection_depth.py  start_weighing.sh
bin_weighing_ws/src/gv_ros2_node/: CMakeLists.txt  README.md
bin_weighing_ws/src/gv_ros2_node/config/: camera_config.yaml
bin_weighing_ws/src/gv_ros2_node/include/: gv_camera.h
bin_weighing_ws/src/gv_ros2_node/include/gv_d100/: def.h  depth2color.h  sendDataByUSB.h  stereoDepth.h  usb.h
bin_weighing_ws/src/gv_ros2_node/launch/: bin_weighing.launch.py  gv_camera.launch.py
bin_weighing_ws/src/gv_ros2_node/res/: 50-myusb.rules
bin_weighing_ws/src/gv_ros2_node/src/: gv_camera.cpp  gv_camera_node.cpp
bin_weighing_ws/src/gv_ros2_node/src/gv_d100/: depth2color.cpp  sendDataByUSB.cpp  stereoDepth.cpp  usb.cpp
bin_weighing_ws/src/hx711_scale/: package.xml  setup.cfg  setup.py
bin_weighing_ws/src/hx711_scale/hx711_scale/: calibration_node.py  hx711_driver.py  interpolation_logic.py  scale_node.py
(+5 files in other folders)
