<?xml version="1.0"?>
<package format="3">
  <name>hx711_scale</name>
  <version>0.0.1</version>
  <description>HX711 scale calibration</description>
  <maintainer email="you@email.com">you</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
